# py-github-analyzer

./: .gitignore  Dockerfile  MAKE.bat  MANIFEST.in  Makefile  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  test.py  tox.ini
py_github_analyzer/: __init__.py  __main__.py  async_github_client.py  cli.py  config.py  core.py  exceptions.py  file_processor.py  github_client.py  logger.py  metadata_generator.py  utils.py
tests/: conftest.py  test_async_github_client.py  test_cli.py  test_core.py  test_file_processor.py  test_metadata_generator.py  test_utils.py
